src/objects/RESTify_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains critical RESTify settings used by Apex client in RestifyClient.cls</description>
    <fields>
        <fullName>ACCESS_KEY__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ACCESS_KEY</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>END_POINT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>END_POINT</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_VERB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HTTP_VERB</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PATH__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PATH</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SECRET_KEY__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SECRET_KEY</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>RESTify Settings</label>
</CustomObject>